@@ -63,10 +63,12 @@
 		78229BEC0C288188001DD4C3 /* treeview.rb in Resources */ = {isa = PBXBuildFile; fileRef = 78229BC00C288188001DD4C3 /* treeview.rb */; };
 		782647CC0CFE86BB0052E598 /* pastieclient.rb in Resources */ = {isa = PBXBuildFile; fileRef = 782647CB0CFE86BB0052E598 /* pastieclient.rb */; };
 		782647CD0CFE86BB0052E598 /* pastieclient.rb in Resources */ = {isa = PBXBuildFile; fileRef = 782647CB0CFE86BB0052E598 /* pastieclient.rb */; };
+		78287EB50D742DAA008D5656 /* Themes in Resources */ = {isa = PBXBuildFile; fileRef = 78287EA90D742DAA008D5656 /* Themes */; };
+		78287EB60D742DAA008D5656 /* Themes in Resources */ = {isa = PBXBuildFile; fileRef = 78287EA90D742DAA008D5656 /* Themes */; };
+		78287EB70D742DBD008D5656 /* Themes in CopyFiles */ = {isa = PBXBuildFile; fileRef = 78287EA90D742DAA008D5656 /* Themes */; };
+		78287EB80D742DC0008D5656 /* Themes in CopyFiles */ = {isa = PBXBuildFile; fileRef = 78287EA90D742DAA008D5656 /* Themes */; };
 		7831B94D0C589A7A00E1F931 /* growl.rb in Resources */ = {isa = PBXBuildFile; fileRef = 7831B94C0C589A7A00E1F931 /* growl.rb */; };
 		7834E1930C69B5AD003C5D65 /* wildcard.rb in Resources */ = {isa = PBXBuildFile; fileRef = 7834E1920C69B5AD003C5D65 /* wildcard.rb */; };
-		7835DF4A0D0415D20064916A /* Theme in CopyFiles */ = {isa = PBXBuildFile; fileRef = 7835DF460D0415D20064916A /* Theme */; };
-		7835DF4B0D0415D20064916A /* Theme in CopyFiles */ = {isa = PBXBuildFile; fileRef = 7835DF460D0415D20064916A /* Theme */; };
 		783952320D261EEE00382565 /* pluginmanager.rb in Resources */ = {isa = PBXBuildFile; fileRef = 783952310D261EEE00382565 /* pluginmanager.rb */; };
 		783952330D261EEE00382565 /* pluginmanager.rb in Resources */ = {isa = PBXBuildFile; fileRef = 783952310D261EEE00382565 /* pluginmanager.rb */; };
 		783952350D261F2500382565 /* plugin.rb in Resources */ = {isa = PBXBuildFile; fileRef = 783952340D261F2500382565 /* plugin.rb */; };
@@ -222,7 +224,7 @@
 			dstPath = ..;
 			dstSubfolderSpec = 7;
 			files = (
-				7835DF4B0D0415D20064916A /* Theme in CopyFiles */,
+				78287EB70D742DBD008D5656 /* Themes in CopyFiles */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -232,7 +234,7 @@
 			dstPath = ..;
 			dstSubfolderSpec = 7;
 			files = (
-				7835DF4A0D0415D20064916A /* Theme in CopyFiles */,
+				78287EB80D742DC0008D5656 /* Themes in CopyFiles */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -300,9 +302,9 @@
 		78229BBF0C288188001DD4C3 /* tableprogressindicator.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = tableprogressindicator.rb; sourceTree = "<group>"; };
 		78229BC00C288188001DD4C3 /* treeview.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = treeview.rb; sourceTree = "<group>"; };
 		782647CB0CFE86BB0052E598 /* pastieclient.rb */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.script.ruby; path = pastieclient.rb; sourceTree = "<group>"; };
+		78287EA90D742DAA008D5656 /* Themes */ = {isa = PBXFileReference; lastKnownFileType = folder; name = Themes; path = resource/Themes; sourceTree = "<group>"; };
 		7831B94C0C589A7A00E1F931 /* growl.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = growl.rb; sourceTree = "<group>"; };
 		7834E1920C69B5AD003C5D65 /* wildcard.rb */ = {isa = PBXFileReference; fileEncoding = 0; lastKnownFileType = text.script.ruby; path = wildcard.rb; sourceTree = "<group>"; };
-		7835DF460D0415D20064916A /* Theme */ = {isa = PBXFileReference; lastKnownFileType = folder; name = Theme; path = resource/Theme; sourceTree = "<group>"; };
 		783952310D261EEE00382565 /* pluginmanager.rb */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.script.ruby; path = pluginmanager.rb; sourceTree = "<group>"; };
 		783952340D261F2500382565 /* plugin.rb */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.script.ruby; path = plugin.rb; sourceTree = "<group>"; };
 		783D0B1F0CF45BC6002CC2FB /* English */ = {isa = PBXFileReference; lastKnownFileType = wrapper.nib; name = English; path = English.lproj/ListDialog.nib; sourceTree = "<group>"; };
@@ -448,7 +450,7 @@
 			children = (
 				7889CAB70D646E2C003D808E /* WelcomeDialog.nib */,
 				78B2DF1F0D0417160092EBDA /* application.icns */,
-				7835DF460D0415D20064916A /* Theme */,
+				78287EA90D742DAA008D5656 /* Themes */,
 				7884E5450CDA91F500AF3678 /* SACrashReporter */,
 				8D1107310486CEB800E47090 /* Info.plist */,
 				78AD78E20C61B8F8001E77F4 /* Localizable.strings */,
@@ -782,6 +784,7 @@
 				783952350D261F2500382565 /* plugin.rb in Resources */,
 				7889CAB90D646E2C003D808E /* WelcomeDialog.nib in Resources */,
 				7889CABF0D647494003D808E /* welcomedialog.rb in Resources */,
+				78287EB50D742DAA008D5656 /* Themes in Resources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -874,6 +877,7 @@
 				783952360D261F2500382565 /* plugin.rb in Resources */,
 				7889CABA0D646E2C003D808E /* WelcomeDialog.nib in Resources */,
 				7889CAC00D647494003D808E /* welcomedialog.rb in Resources */,
+				78287EB60D742DAA008D5656 /* Themes in Resources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
